--- a/css-basic/index.html
+++ b/css-basic/index.html
@@ -11,6 +11,7 @@
   <header>
     <nav>
         <ul>
+            <li class="logo">&#9733;</li>
             <li> <a href="#">Home</a></li>
             <li><a href="tweets.html">Tweet</a></li>
         </ul>
