add banner section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -17,5 +17,47 @@
         </nav>
        
     </header>
+
+    <main>
+        <section>
+            <!-- block 1 -->
+                <div>
+                 <h1></h1>
+                 <p></p>
+                 <button></button>
+                </div>
+            <!-- block 2 -->
+                <div>
+                   <h2></h2>
+            <!-- grid of 4 blocks -->
+                    <div>
+                        <div>
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+
+                        <div>
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                        
+                        <div>
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+
+                        <div>
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+
+                    </div>
+                </div>
+        </section>
+    </main>
 </body>
 </html>
