--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -58,6 +58,18 @@
                     </div>
                 </div>
         </section>
+        <!-- quote section -->
+         <section>
+             <div>
+                <img src="" alt="">
+                
+                <div>
+                    <blockquote></blockquote>
+                    <p></p>
+                    <p></p>
+                 </div>
+             </div>
+         </section>
     </main>
 </body>
 </html>
