add video sectiion

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -62,7 +62,7 @@
          <section>
              <div>
                 <img src="" alt="">
-                
+
                 <div>
                     <blockquote></blockquote>
                     <p></p>
@@ -70,6 +70,91 @@
                  </div>
              </div>
          </section>
+         <!-- video section -->
+          <section>
+             <div>
+                <h2></h2>
+
+                <div>
+                    <!-- block containing 4 video block -->
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <div>
+                            <!-- block of author -->
+                            <img src="" alt="">
+                            <h4></h4>
+                        </div>
+                        <div>
+                            <!-- block of images -->
+                             <div>
+                                <img src="" alt="">
+                                <img src="" alt="">
+                             </div>
+                             <p></p>
+                        </div>
+                     </div>
+
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <div>
+                            <!-- block of author -->
+                            <img src="" alt="">
+                            <h4></h4>
+                        </div>
+                        <div>
+                            <!-- block of images -->
+                             <div>
+                                <img src="" alt="">
+                                <img src="" alt="">
+                             </div>
+                             <p></p>
+                        </div>
+                     </div>
+
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <div>
+                            <!-- block of author -->
+                            <img src="" alt="">
+                            <h4></h4>
+                        </div>
+                        <div>
+                            <!-- block of images -->
+                             <div>
+                                <img src="" alt="">
+                                <img src="" alt="">
+                             </div>
+                             <p></p>
+                        </div>
+                     </div>
+
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                        <div>
+                            <!-- block of author -->
+                            <img src="" alt="">
+                            <h4></h4>
+                        </div>
+                        <div>
+                            <!-- block of images -->
+                             <div>
+                                <img src="" alt="">
+                                <img src="" alt="">
+                             </div>
+                             <p></p>
+                        </div>
+                     </div>
+                </div>
+             </div>
+          </section>
     </main>
 </body>
 </html>
