add membership section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -155,6 +155,37 @@
                 </div>
              </div>
           </section>
+          <!-- membership section -->
+           <section>
+                <h2></h2>
+                <div>
+                    <!-- block with 4 block item -->
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                     </div>
+
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                     </div>
+
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                     </div>
+
+                     <div>
+                        <img src="" alt="">
+                        <h3></h3>
+                        <p></p>
+                     </div>
+                </div>
+                <button></button>
+           </section>
     </main>
 </body>
 </html>
