add  faq section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -20,11 +20,12 @@
 
     <main>
         <section>
+            <!-- banner section -->
             <!-- block 1 -->
                 <div>
-                 <h1></h1>
-                 <p></p>
-                 <button></button>
+                  <h1></h1>
+                  <p></p>
+                  <button></button>
                 </div>
             <!-- block 2 -->
                 <div>
@@ -60,7 +61,7 @@
         </section>
         <!-- quote section -->
          <section>
-             <div>
+            <div>
                 <img src="" alt="">
 
                 <div>
@@ -72,7 +73,6 @@
          </section>
          <!-- video section -->
           <section>
-             <div>
                 <h2></h2>
 
                 <div>
@@ -153,7 +153,6 @@
                         </div>
                      </div>
                 </div>
-             </div>
           </section>
           <!-- membership section -->
            <section>
@@ -186,6 +185,36 @@
                 </div>
                 <button></button>
            </section>
+           <!-- faq section -->
+            <section>
+                <div>
+                    <!-- row block 1 -->
+                     <div>
+                        <!-- contain 2 item blocks -->
+                         <div>
+                            <h3></h3>
+                            <p></p>
+                         </div>
+
+                         <div>
+                            <h3></h3>
+                            <p></p>
+                         </div>
+                     </div>
+                     <!-- row block 2 -->
+                      <div>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                         </div>
+
+                         <div>
+                            <h3></h3>
+                            <p></p>
+                         </div>
+                      </div>
+                </div>
+            </section>
     </main>
 </body>
 </html>
