add footer section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -216,5 +216,21 @@
                 </div>
             </section>
     </main>
+    <footer>
+        <section>
+            <div>
+                <img src="" alt="">
+                <div>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+            </div>
+            <p>&copy;smileschool 2020</p>
+        </section>
+    </footer>
 </body>
 </html>
