add images in video section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -69,12 +69,12 @@
         <!-- quote section -->
          <section>
             <div>
-                <img src="" alt="">
+                <img src="images/5.png" alt="">
 
                 <div>
                     <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                    <h3>NAME</h3>
-                    <p>Weather presenter</p>
+                    <h3>Person Name</h3>
+                    <p><em>Weather presenter</em></p>
                  </div>
              </div>
          </section>
@@ -83,7 +83,7 @@
                 <h2>Most popular tutorials</h2>
                     <!-- block containing 4 video block -->
                      <div>
-                        <img src="" alt="">
+                        <img src="images/9.png" alt="">
                         <h3>Diagonal Smile</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                           Illum omnis qui eveniet sunt voluptates autem excepturi?</p>
@@ -95,18 +95,14 @@
                         <div>
                           <div>
                             <!-- block of images -->
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
-                            <div><i class="fa-solid fa-star"></i></div>
+                           <img src="images/rating.png" alt="">
                           </div>
                              <p>8 min</p>
                         </div>
 
                      <div>
-                        <img src="images/4.png" alt="">
-                        <h3>Happy Smile</h3>
+                        <img src="images/7.png" alt="">
+                        <h3>Sad Smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, doloribus.</p>
                         <div>
                             <!-- block of author -->
@@ -116,17 +112,13 @@
                         <div>
                             <!-- block of images -->
                              <div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>  
+                                <img src="images/rating.png" alt="">
                              </div>
                              <p>8 min </p>
                         </div>
                      
                      <div>
-                        <img src="images/3.png" alt="">
+                        <img src="images/8.png" alt="">
                         <h3>Natural smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, beatae?/p>
                         <div>
@@ -137,19 +129,15 @@
                         <div>
                             <!-- block of images -->
                              <div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
+                                <img src="images/rating.png" alt="">
                              </div>
                              <p>8 min</p>
                         </div>
                      
 
                      <div>
-                        <img src="images/2.png" alt="">
-                        <h3>Sad smile</h3>
+                        <img src="images/6.png" alt="">
+                        <h3>Happy smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quibusdam?</p>
                         <div>
                             <!-- block of author -->
@@ -159,11 +147,7 @@
                         <div>
                             <!-- block of images -->
                              <div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
-                                <div><i class="fa-solid fa-star"></i></div>
+                                <img src="images/rating.png" alt="">
                              </div>
                              <p>8 min</p>
                         </div>
