add logo image and play image to video section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <a href="">
-                <img src=""https://fakeimg.pl/250x250?text=Sample+Logo"" alt="logo">
+                <img src="images/logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -84,6 +84,7 @@
                     <!-- block containing 4 video block -->
                      <div>
                         <img src="images/9.png" alt="">
+                        <img src="images/play.png" alt="">
                         <h3>Diagonal Smile</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                           Illum omnis qui eveniet sunt voluptates autem excepturi?</p>
@@ -102,6 +103,7 @@
 
                      <div>
                         <img src="images/7.png" alt="">
+                        <img src="images/play.png" alt="">
                         <h3>Sad Smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, doloribus.</p>
                         <div>
@@ -119,6 +121,7 @@
                      
                      <div>
                         <img src="images/8.png" alt="">
+                        <img src="images/play.png" alt="">
                         <h3>Natural smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, beatae?/p>
                         <div>
@@ -137,6 +140,7 @@
 
                      <div>
                         <img src="images/6.png" alt="">
+                        <img src="images/play.png" alt="">
                         <h3>Happy smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quibusdam?</p>
                         <div>
