--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -9,18 +9,16 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <a href="">
                 <img src="images/logo.png" alt="logo">
             </a>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">COURSE</a></li>
                 <li><a href="#">PRICING</a></li>
                 <li><a href="#">LOGIN</a></li>
             </ul>
         </nav>
-        
-       
     </header>
 
     <main>
