--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="styles.css">
+     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -22,10 +24,10 @@
     </header>
 
     <main>
-        <section>
+        <section class="banner-section">
             <!-- banner section -->
             <!-- block 1 -->
-                <div>
+                <div class="text-section">
                   <h1>Get schooled</h1>
                   <span>SMILES</span>
                   <span>GRIN</span>
@@ -33,37 +35,40 @@
                   <button>REGISTER FOR FREE</button>
                 </div>
             <!-- block 2 -->
-                <div>
-                   <h2>Learn from the pros</h2>
+                <div class="head-2">
+                   <h2><span>Learn </span>from the pros</h2>
             <!-- grid of 4 blocks -->
-                    <div>
-                        <div>
+                    <div class="image-section">
+                        <div class="image-one">
                             <img src="images/1.png" alt="">
                             <h3>Phillip Massey</h3>
-                            <p>« Smile of the year » 2018 - 2019</p>
+                            <p>« Smile of the year » <br> 2018 - 2019</p>
                         </div>
 
-                        <div>
+                        <div class="image-two">
                             <img src="images/3.png" alt="">
                             <h3>Nannie Lawrence</h3>
-                            <p>Best « little smile » 2017</p>
+                            <p>Best « little smile » <br> 2017</p>
                         </div>
                         
-                        <div>
+                        <div class="image-3">
                             <img src="images/2.png" alt="">
                             <h3>Bruce Walters</h3>
-                            <p>Best « Friend Smile » live performance 2019</p>
+                            <p>Best « Friend Smile » <br> live performance 2019</p>
                         </div>
 
-                        <div>
+                        <div class="image-four">
                             <img src="images/4.png" alt="">
                             <h3>Henry Hughes</h3>
-                            <p>« 24h smiles » winner 2016 - 2019</p>
+                            <p>« 24h smiles » <br> winner 2016 - 2019</p>
                         </div>
 
                     </div>
                 </div>
         </section>
+    </main>
+
+    <main>
         <!-- quote section -->
          <section>
             <div>
