add border radius to images

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -51,7 +51,7 @@
                             <p>Best « little smile » <br> 2017</p>
                         </div>
                         
-                        <div class="image-3">
+                        <div class="image-three">
                             <img src="images/2.png" alt="">
                             <h3>Bruce Walters</h3>
                             <p>Best « Friend Smile » <br> live performance 2019</p>
