--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -42,31 +42,30 @@
                         <div class="image-one">
                             <img src="images/1.png" alt="">
                             <h3>Phillip Massey</h3>
-                            <p>« Smile of the year » <br> 2018 - 2019</p>
+                            <p>« Smile of the year » <span>2018 - 2019</span> </p>
                         </div>
 
                         <div class="image-two">
                             <img src="images/3.png" alt="">
                             <h3>Nannie Lawrence</h3>
-                            <p>Best « little smile » <br> 2017</p>
+                            <p>Best « little smile » <span>2017</span></p>
                         </div>
                         
                         <div class="image-three">
                             <img src="images/2.png" alt="">
                             <h3>Bruce Walters</h3>
-                            <p>Best « Friend Smile » <br> live performance 2019</p>
+                            <p>Best « Friend Smile » <span>live performance 2019</span></p>
                         </div>
 
                         <div class="image-four">
                             <img src="images/4.png" alt="">
                             <h3>Henry Hughes</h3>
-                            <p>« 24h smiles » <br> winner 2016 - 2019</p>
+                            <p>« 24h smiles » <span>winner 2016 - 2019</span></p>
                         </div>
 
                     </div>
                 </div>
         </section>
-    </main>
 
     <main>
         <!-- quote section -->
