--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -17,8 +17,8 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#">COURSE</a></li>
-                <li><a href="#">PRICING</a></li>
-                <li><a href="#">LOGIN</a></li>
+                <li><a href="#">PRICING</a></li> 
+                 <li><a href="#">LOGIN</a></li>
             </ul>
         </nav>
     </header>
@@ -67,17 +67,15 @@
                 </div>
         </section>
 
-    <main>
         <!-- quote section -->
-         <section>
-            <div>
+         <section class="quotes">
+            <div  class="image-five">
                 <img src="images/5.png" alt="">
-
-                <div>
+            </div>
+            <div class="text-section2">
                     <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
                     <h3>Person Name</h3>
-                    <p><em>Weather presenter</em></p>
-                 </div>
+                    <span><em>Weather presenter</em></span>
              </div>
          </section>
          <!-- video section -->
