style author in the video-container

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -90,36 +90,33 @@
                          </div>
                         <h3>Diagonal Smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, asperiores.</p>
-                        <div>
+                        <div class="author">
                             <!-- block of author -->
                             <img src="images/1.png" alt="">
                             <h4>Phillip Massey</h4>
                         </div>
-                          <div>
-                            <!-- block of images -->
+                          <div class="rating">
                            <img src="images/rating.png" alt="">
+                           <p>8 min</p>
                           </div>
-                             <p>8 min</p>
                     </div>
 
                     <div class="video-card">
                         <div class="image-wrapper">
                             <img src="images/7.png" alt="" class="image-play">
-                        <img src="images/play.png" alt="" class="play-button">
+                            <img src="images/play.png" alt="" class="play-button">
                         </div>
-                        
                         <h3>Sad Smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, natus.</p>
-                        <div>
+                        <div class="author">
                             <!-- block of author -->
                             <img src="images/1.png" alt="">
                             <h4>Phillip Massey</h4>
                         </div>
-                            <!-- block of images -->
-                             <div>
+                             <div class="rating">
                                 <img src="images/rating.png" alt="">
+                                <p>8 min </p>
                              </div>
-                             <p>8 min </p>
                     </div>
                      
                     <div class="video-card">
@@ -134,11 +131,10 @@
                             <img src="images/1.png" alt="">
                             <h4>Phillip Massey</h4>
                         </div>
-                            <!-- block of images -->
                              <div class="rating">
                                 <img src="images/rating.png" alt="">
+                                <p>8 min </p>
                              </div>
-                             <p>8 min</p>
                     </div>
 
                     <div class="video-card">
@@ -148,16 +144,15 @@
                         </div>
                         <h3>Happy smile</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quibusdam?</p>
-                        <div>
+                        <div class="author">
                             <!-- block of author -->
                             <img src="images/1.png" alt="">
                             <h4>Phillip Massey</h4>
                         </div>
-                            <!-- block of images -->
-                             <div>
+                             <div class="rating">
                                 <img src="images/rating.png" alt="">
+                                <p>8 min </p>
                              </div>
-                             <p>8 min</p>
                     </div>
                 </div>
           </section>
