style the faq section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -190,39 +190,33 @@
                 </div>
            </section>
            <!-- faq section -->
-            <section>
-                <h2>F.A.Q</h2>
-                <div>
+            <section class="faq-section">
+                <div class="heading-faq">
+                    <h2>F.A.Q.</h2>
+                </div>
                     <!-- row block 1 -->
-                     <div>
+                    <div class="container-1">
                         <!-- contain 2 item blocks -->
                          <div>
-                            <h3>How does this work</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, illo quis iusto eaque voluptatibus molestiae natus, voluptatum sapiente, tempora doloremque pariatur. Ducimus, 
-                                voluptatum nihil ab vel fugiat beatae temporibus, eum, velit rem accusantium expedita deserunt nostrum doloremque doloribus iusto optio reprehenderit eius quisquam nisi unde saepe id culpa! Aspernatur, a.</p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim ullam cupiditate distinctio accusamus praesentium similique voluptatibus tenetur in! Vel excepturi ex est dolores repellat soluta. Soluta veritatis placeat deleniti autem? Voluptatibus praesentium ea cupiditate dicta officia tempore nisi, corporis ratione obcaecati, nulla vero sint, itaque aperiam odio? Quaerat, dicta unde.</p>
                          </div>
 
                          <div>
-                            <h3>How does this work</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit officia aliquid odit voluptatum. Corporis asperiores ea, dolorem repellat culpa repudiandae velit quo fugiat, beatae est,
-                                 officiis minus voluptate nisi temporibus aliquam dolore non voluptas porro totam quis eum iusto! Natus.</p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam reiciendis cum repellendus corrupti, in iusto culpa ut quaerat facere, fugiat accusantium debitis quod nemo incidunt officiis quisquam beatae repellat porro dolorem cupiditate. Doloribus possimus, ex eaque laudantium autem quis harum, porro, odio voluptatum ratione ducimus similique inventore mollitia dolore ea.</p>
                          </div>
-                     </div>
                      <!-- row block 2 -->
-                      <div>
                         <div>
-                            <h3>How does this Work</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, est earum quia a incidunt 
-                                consequatur praesentium odio esse maiores non minima! Nesciunt ex natus error voluptatibus odit unde ipsum voluptate!</p>
+                            <h3>How does this Work?</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, similique molestiae modi dolorem culpa laborum. Vel aliquid adipisci sint optio, eos nesciunt quia hic sed unde? Culpa fugiat quaerat similique repudiandae sapiente aperiam harum quod maxime odio eum eius, labore ipsa, nulla exercitationem? Vel velit quasi laboriosam vitae, consectetur suscipit.</p>
                          </div>
 
                          <div>
-                            <h3>How does this work</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto assumenda eligendi sequi sunt aliquid rem dolores,
-                                 esse corporis libero molestiae itaque ex recusandae doloribus nulla sapiente ipsa nisi aperiam quas?</p>
+                            <h3>How does this work?</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam illo minima ipsum quas a porro officia, nemo culpa est provident laborum dolorem nobis reiciendis facilis dolore consectetur, voluptatem reprehenderit, quidem sunt magnam dolor! Repellat, eum sed. Praesentium beatae, enim totam laborum sed officia repellendus nesciunt ab, debitis nisi dolore quis?</p>
                          </div>
-                      </div>
-                </div>
+                    </div>
             </section>
     </main>
     <footer>
