--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="styles.css">
+     <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
      <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 
 </head>
@@ -220,17 +223,18 @@
             </section>
     </main>
     <footer>
-        <section>
-            <div>
+         <section class="footer-section">
+            <div class="footer-logo">
                 <img src="images/logo.png" alt="logo">
-                <div>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                </div>
             </div>
+            <div class="brand-icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+         </section>
             <p>&copy;smileschool 2020</p>
-        </section>
     </footer>
 </body>
+<script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
 </html>
