add paddings in the quote section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -72,14 +72,16 @@
     <main>
         <!-- quote section -->
          <section class="quotes">
-            <div  class="image-five">
-                <img src="images/5.png" alt="">
-            </div>
-            <div class="text-section2">
+            <div class="quote-container">
+                <div  class="image-five">
+                    <img src="images/5.png" alt="">
+                </div>
+                <div class="text-section2">
                     <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                    <h3>Person Name</h3>
-                    <span><em>Weather presenter</em></span>
-             </div>
+                     <h3>Person Name</h3>
+                     <span><em>Weather presenter</em></span>
+                 </div>
+            </div>
          </section>
          <!-- video section -->
           <section class="video-list">
