deletee wrapping text in the video section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -94,7 +94,7 @@
                             <img src="images/play.png" alt="" class="play-button">
                          </div>
                         <h3>Diagonal Smile</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, asperiores.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi.</p>
                         <div class="author">
                             <!-- block of author -->
                             <img src="images/1.png" alt="">
@@ -130,7 +130,7 @@
                             <img src="images/play.png" alt="" class="play-button">
                         </div>
                         <h3>Natural smile</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, fugiat.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         <div class="author">
                             <!-- block of author -->
                             <img src="images/1.png" alt="">
