Fix table cells and confirm meta tag for responsive design

--- a/css-basic/index.html
+++ b/css-basic/index.html
@@ -39,24 +39,24 @@
          </thead>
          <tbody>
             <tr>
-                <th>John</th>
-                <th>25</th>
-                <th>USA</th>
+                <td>John</td>
+                <td>25</td>
+                <td>USA</td>
             </tr>
             <tr>
-                <th>Emily</th>
-                <th>28</th>
-                <th>Canada</th>
+                <td>Emily</td>
+                <td>28</td>
+                <td>Canada</td>
             </tr>
             <tr>
-               <th>michael</th>
-               <th>32</th>
-               <th>Australia</th>
+               <td>michael</td>
+               <td>32</td>
+               <td>Australia</td>
             </tr>
             <tr>
-                <th>Sophia</th>
-                <th>21</th>
-                <th>UK</th>
+                <td>Sophia</td>
+                <td>21</td>
+                <td>UK</td>
             </tr>
          </tbody>
       </table>
