--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="0-styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+    </head>
 <body>
     <div class="container">
-        <header></header>
+        <div class="hero-section1">
+            <header>
+                <nav>
+                    <a href="" class="nav-link"><img src="images/logo_headphones.png" alt="logo"></a>
+                    <ul class="nav-list">
+                        <li><a href="#">What we do</a></li>
+                        <li><a href="#">Our results</a></li>
+                        <li><a href="#">Contuct us</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section class="hero-page">
+                   <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
+                   <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                   <button>Call to action</button>
+                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quae fuga quisquam molestias ipsum, et quis, facilis maxime veniam exercitationem sequi eveniet deleniti, assumenda impedit harum eius esse minus iusto debitis a commodi perspiciatis atque dolorem fugiat. Vero asperiores, dolor nemo non ad placeat consectetur quis unde harum eligendi rem.</p>
+            </section>
+        </div>
+       
         <main></main>
         <footer></footer>
     </div>
