--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -16,7 +16,7 @@
                     <ul class="nav-list">
                         <li><a href="#">What we do</a></li>
                         <li><a href="#">Our results</a></li>
-                        <li><a href="#">Contuct us</a></li>
+                        <li><a href="#">Contact us</a></li>
                     </ul>
                 </nav>
             </header>
