--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -8,11 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
 <body>
-    <div class="container">
-        <div class="hero-section1">
+        <div class="hero-section">
             <header>
-                <nav>
-                    <a href="" class="nav-link"><img src="images/logo_headphones.png" alt="logo"></a>
+                <nav class="container nav-bar">
+                    <a href="" class="nav-logo"><img src="images/logo_headphones.png" alt="logo"></a>
                     <ul class="nav-list">
                         <li><a href="#">What we do</a></li>
                         <li><a href="#">Our results</a></li>
@@ -20,16 +19,17 @@
                     </ul>
                 </nav>
             </header>
-            <section class="hero-page">
-                   <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
-                   <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                   <button>Call to action</button>
+            <section class="hero-page container">
+                <div class="top-heading">
+                    <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                </div>
+                   <button class="action-btn">Call to action</button>
                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quae fuga quisquam molestias ipsum, et quis, facilis maxime veniam exercitationem sequi eveniet deleniti, assumenda impedit harum eius esse minus iusto debitis a commodi perspiciatis atque dolorem fugiat. Vero asperiores, dolor nemo non ad placeat consectetur quis unde harum eligendi rem.</p>
             </section>
         </div>
        
-        <main></main>
-        <footer></footer>
-    </div>
+        <main class="container"></main>
+        <footer class="container"></footer>
 </body>
 </html>
