style hero headings and  paragrapgh..

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -24,8 +24,10 @@
                     <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
                 </div>
-                   <button class="action-btn">Call to action</button>
-                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quae fuga quisquam molestias ipsum, et quis, facilis maxime veniam exercitationem sequi eveniet deleniti, assumenda impedit harum eius esse minus iusto debitis a commodi perspiciatis atque dolorem fugiat. Vero asperiores, dolor nemo non ad placeat consectetur quis unde harum eligendi rem.</p>
+                <div class="button-container">
+                    <button class="action-btn">Call to action</button>
+                </div>
+                    <p class="hero-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Natarum atque accusamus lorem jjgo ew explicabo quod fuga possimus mollitia. Ratione ea mollitia, blanditiis esse veritatifvfar, impedit aspernatur atque corrupti magni, veniam iusto Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </section>
         </div>
        
