style hamburger menu  for mobile responsiveness

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -11,6 +11,11 @@
         <div class="hero-section">
             <header>
                 <nav class="container nav-bar">
+                    <div class="hamburger" id="hamburger">
+                        <span class="line line-1"></span>
+                        <span class="line line-2"></span>
+                        <span class="line line-3"></span>
+                      </div>
                     <a href="" class="nav-logo"><img src="images/logo_headphones.png" alt="logo"></a>
                     <ul class="nav-list">
                         <li><a href="#">What we do</a></li>
