feat: add tablet styling and 2x2 grid layout for "What we do" section

--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -27,13 +27,13 @@
             </header>
             <section class="hero-page container">
                 <div class="top-heading">
-                    <h1>Lorem ipsum dolor sit <br> amet lorem ipsum</h1>
-                    <h2>Lorem ipsum dolor sit amet lorem  <br> ipsum dolor set</h2>
+                    <h1>Lorem ipsum dolor sit  amet lorem ipsum</h1>
+                    <h2>Lorem ipsum dolor sit amet lorem  ipsum dolor set</h2>
                 </div>
                 <div class="button-container">
                     <button class="action-btn">Call to action</button>
                 </div>
-                    <p class="hero-paragraph">Lorem ipsum dolor, sit amet consectetur <br> adipisicing elit. Excepturi, nihil? Lorem ipsum dolor <br> sit amet  consectetur adipisicing elit. Natarum atque accusamus lorem jjgo ew explicabo quod fuga possimus  mollitia.  Ratione ea <br> mollitia, blanditiis esse veritatifvfar, impedit aspernatur atque corrupti magni, veniam iusto Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <p class="hero-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nihil? Lorem ipsum dolor sit amet  consectetur adipisicing elit. Natarum atque accusamus lorem jjgo ew explicabo quod fuga possimus  mollitia.  Ratione ea  mollitia, blanditiis esse veritatifvfar, impedit aspernatur atque corrupti magni, veniam iusto Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </section>
         </div>
        
@@ -43,30 +43,30 @@
                     <h2>What we do...</h2>
                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.  rerum dolores maxime accusamus illum unde quod nostrum, consequuntur sed atque perferendis! Fuga, consectetur vel officiis minus nihil dolore placeat quasi? Error accusantium fuga perferendis corrupti ex quibusdam et perspiciatis, praesentium aliquid explicabo a quas inventore id pariatur! Quisquam, omnis voluptates explicabo nam odio maiores labore ipsum esse pariatur, vel provident?</p>
                 </div>
-                <div class="font-icons">
+                <div class="font-icons container">
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_sound icon-font"></span>
                         <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_video icon-font"></span>
                         <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet, onsectetur adipisicing elit.</p>
                     </div>
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_music icon-font"></span>
                         <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_hearing icon-font"></span>
                         <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet,  consectetur adipisicing elit.</p>
                     </div>
 
                 </div>
