--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="1-styles.css">
+    <link rel="stylesheet" href="2-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
 <body>
@@ -36,7 +36,6 @@
                     <p class="hero-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nihil? Lorem ipsum dolor sit amet  consectetur adipisicing elit. Natarum atque accusamus lorem jjgo ew explicabo quod fuga possimus  mollitia.  Ratione ea  mollitia, blanditiis esse veritatifvfar, impedit aspernatur atque corrupti magni, veniam iusto Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </section>
         </div>
-       
         <main class="container">
             <section class="what-we-do-section">
                 <div class="what-we-do">
@@ -71,6 +70,42 @@
 
                 </div>
             </section>
+             <section class="result-section">
+                 <div class="result-content">
+                    <h2>Our results speak for themselves</h2>
+                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quas dolorum architecto asperiores expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, nesciunt? Lorem Excepturi, eveniet accusantium quas vel error  quod commodi expedita.</p>
+                 </div>
+                 <div class="pentagon-container">
+                    <div class="pentagon">
+                        <img src="images/pentagone.png" alt="our results">
+                        <div class="content-position">
+                            <span>+2%</span>
+                            <p>lorem ipsum dolor</p>
+                        </div>
+                    </div>
+                    <div class="pentagon">
+                        <img src="images/pentagone.png" alt="our results">
+                        <div class="content-position">
+                            <span>+2%</span>
+                            <p>lorem ipsum dolor</p>
+                        </div>
+                    </div>
+                    <div class="pentagon">
+                        <img src="images/pentagone.png" alt="our results">
+                        <div class="content-position">
+                            <span>+2%</span>
+                            <p>lorem ipsum dolor</p>
+                        </div>
+                    </div>
+                    <div class="pentagon">
+                        <img src="images/pentagone.png" alt="our results">
+                        <div class="content-position">
+                            <span>+2%</span>
+                            <p>lorem ipsum dolor</p>
+                        </div>
+                    </div>
+                 </div>
+             </section>
         </main>
         <footer class="container"></footer>
 </body>
