--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -36,8 +36,8 @@
                     <p class="hero-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nihil? Lorem ipsum dolor sit amet  consectetur adipisicing elit. Natarum atque accusamus lorem jjgo ew explicabo quod fuga possimus  mollitia.  Ratione ea  mollitia, blanditiis esse veritatifvfar, impedit aspernatur atque corrupti magni, veniam iusto Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </section>
         </div>
-        <main class="container">
-            <section class="what-we-do-section">
+        <main >
+            <section class="what-we-do-section container">
                 <div class="what-we-do">
                     <h2>What we do...</h2>
                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.  rerum dolores maxime accusamus illum unde quod nostrum, consequuntur sed atque perferendis! Fuga, consectetur vel officiis minus nihil dolore placeat quasi? Error accusantium fuga perferendis corrupti ex quibusdam et perspiciatis, praesentium aliquid explicabo a quas inventore id pariatur! Quisquam, omnis voluptates explicabo nam odio maiores labore ipsum esse pariatur, vel provident?</p>
@@ -70,42 +70,43 @@
 
                 </div>
             </section>
-             <section class="result-section">
-                 <div class="result-content">
-                    <h2>Our results speak for themselves</h2>
-                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quas dolorum architecto asperiores expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, nesciunt? Lorem Excepturi, eveniet accusantium quas vel error  quod commodi expedita.</p>
-                 </div>
-                 <div class="pentagon-container">
-                    <div class="pentagon">
-                        <img src="images/pentagone.png" alt="our results">
-                        <div class="content-position">
-                            <span>+2%</span>
-                            <p>lorem ipsum dolor</p>
-                        </div>
+                <section class="result-section">
+                    <div class="result-content container">
+                       <h2>Our results speak for themselves</h2>
+                       <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quas dolorum architecto asperiores expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, nesciunt? Lorem Excepturi, eveniet accusantium quas vel error  quod commodi expedita.</p>
                     </div>
-                    <div class="pentagon">
-                        <img src="images/pentagone.png" alt="our results">
-                        <div class="content-position">
-                            <span>+2%</span>
-                            <p>lorem ipsum dolor</p>
-                        </div>
-                    </div>
-                    <div class="pentagon">
-                        <img src="images/pentagone.png" alt="our results">
-                        <div class="content-position">
-                            <span>+2%</span>
-                            <p>lorem ipsum dolor</p>
-                        </div>
-                    </div>
-                    <div class="pentagon">
-                        <img src="images/pentagone.png" alt="our results">
-                        <div class="content-position">
-                            <span>+2%</span>
-                            <p>lorem ipsum dolor</p>
-                        </div>
-                    </div>
-                 </div>
-             </section>
+                    <div class="pentagon-container container">
+                       <div class="pentagon">
+                           <img src="images/pentagone.png" alt="our results">
+                           <div class="content-position">
+                               <span>+2%</span>
+                               <p>lorem ipsum dolor</p>
+                           </div>
+                       </div>
+                       <div class="pentagon">
+                           <img src="images/pentagone.png" alt="our results">
+                           <div class="content-position">
+                               <span>+2%</span>
+                               <p>lorem ipsum dolor</p>
+                           </div>
+                       </div>
+                       <div class="pentagon">
+                           <img src="images/pentagone.png" alt="our results">
+                           <div class="content-position">
+                               <span>+2%</span>
+                               <p>lorem ipsum dolor</p>
+                           </div>
+                       </div>
+                       <div class="pentagon">
+                           <img src="images/pentagone.png" alt="our results">
+                           <div class="content-position">
+                               <span>+2%</span>
+                               <p>lorem ipsum dolor</p>
+                           </div>
+                       </div>
+                </section>
+            </div>
+             
         </main>
         <footer class="container"></footer>
 </body>
