--- a/headphones/3-index.html
+++ b/headphones/3-index.html
@@ -103,10 +103,31 @@
                                <span>+2%</span>
                                <p>lorem ipsum dolor</p>
                            </div>
-                       </div>
+                    </div>
                 </section>
-            </div>
-             
+                <section class="contact-section container">
+                   <div class="contact-us">
+                         <h3>Contact us</h3>
+                         <form>
+                            <div class="inputs">
+                                <label for="name">Name</label>
+                                <input type="text" id="name">
+                            </div>
+                           <div class="inputs">
+                            <label for="email">Email</label>
+                            <input type="email" id="email">
+                           </div>
+                           <div class="inputs">
+                            <label for="message">Your message</label>
+                            <input type="text" id="message">
+                           </div>
+                         </form>
+
+                         <div class="button-container">
+                            <button class="action-btn">Call to action</button>
+                        </div>
+                   </div>
+                </section>
         </main>
         <footer class="container"></footer>
 </body>
