feat: add footer section

--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -129,6 +129,16 @@
                    </div>
                 </section>
         </main>
-        <footer class="container"></footer>
+        <footer class="container">
+            <div class="footer-section">
+                <img src="images/logo_headphones.png" alt="logo">
+                <div class="footericons">
+                    <span class="holberton_school-icon-ic_facebook footer-icons"></span>
+                    <span class="holberton_school-icon-ic_twitter footer-icons"></span>
+                    <span class="holberton_school-icon-ic_instagram footer-icons"></span>
+                </div>
+                <p>&copy;headphone2020</p>
+            </div>
+        </footer>
 </body>
 </html>
