--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -27,13 +27,13 @@
             </header>
             <section class="hero-page container">
                 <div class="top-heading">
-                    <h1>Lorem ipsum dolor sit  amet lorem ipsum</h1>
-                    <h2>Lorem ipsum dolor sit amet lorem  ipsum dolor set</h2>
+                    <h1>Feel the Sound Like Never Before</h1>
+                    <h2>Experience music the way it was meant to be — crystal clear, powerful, and immersive.</h2>
                 </div>
                 <div class="button-container">
-                    <button class="action-btn">Call to action</button>
+                    <button class="action-btn">Shop Now</button>
                 </div>
-                    <p class="hero-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nihil? Lorem ipsum dolor sit amet  consectetur adipisicing elit. Natarum atque accusamus lorem jjgo ew explicabo quod fuga possimus  mollitia.  Ratione ea  mollitia, blanditiis esse veritatifvfar, impedit aspernatur atque corrupti magni, veniam iusto Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <p class="hero-paragraph">Our headphones are designed with cutting-edge audio technology to deliver unmatched sound quality. Whether you're a casual listener or an audiophile, you'll enjoy deep bass, crisp highs, and total comfort. Built for everyday use with a sleek design, they're perfect for music, gaming, or calls.</p>
             </section>
         </div>
         <main >
